   the rest of the framework.

* Updated CFrame
 - SetView can now be used to switch between multiple views. This also applies
   to CDocker, CDockContainer and CMDIChild.
 - Added a virtual SetupMenuIcons function. This functions adds the set of
   ToolBar images to the icons used in menus. Override this to add additional
   icons to the menus.
   

Changes in detail
-----------------
Added CRibbonDockFrame           class
Added CFrame::SetupMenuIcons     member function
Added RibbonDockFrame            sample application

Removed CDocker::GetDockFromPoint


Version 8.2
===========

New Features and Enhancements
----------------------------- 
* Added support for Common Dialogs
The following common dialogs have been added to the framework:
 - CColorDialog
 - CFindReplacDialog
 - CFileDialog
 - CFontDialog
 - CPrintDialog
 - CPageSetupDialog
 
The CPrintDialog and CPageSetupDialog classes share global memory for 
their hDevMode and hDevNames handles. This global memory persists after
the CPrintDialog and CPageSetupDialog objects are destructed, and is 
managed by CWinApp. There is no need for the user to manually lock,
unlock or free the hDevMode and hDevNames memory.
Note: CFile::OpenFileDialog and CFile::SaveFileDialog have been removed.
Use CFiledDialog for these instead.

* Updated CFrame
 - GetInitValues and SetInitValues have been added to conveniently store
   and retrieve a set of values from the registry or an INI file. These 
   functions replace a set of functions that stored and retrieved these
   values individually.

* Added GetAppDataPath
 - This function returns the path to the AppData folder. Applications 
   can create folders within AppData to store their data. 
   
* Updated samples
 - The INIFrame sample now stores the settings file in the AppData folder.
   It is important for applications to store values in the AppData folder
   on the more modern operating systems (Vista and above) as these don't